<resources>
    <string name="app_name">Movienator</string>
    <string name="title_activity_detail">Movie details</string>
    <string name="title_reset">Reset</string>
    <string name="title_sort">Sort</string>
    <string name="title_popular">Most popular</string>
    <string name="title_top_rated">Top rated</string>
    <string name="title_now_playing">Now playing</string>
    <string name="title_favourites">Favourites</string>
    <string name="title_synopsis">Reviews</string>
    <string name="title_review_author">Review by:</string>

    <string name="action_retry">Retry</string>

    <string name="release_date">Release date:</string>
    <string name="vote_average">Vote average:</string>
    <string name="plot_synopsis">Plot synopsis:</string>
    <string name="trailer">Trailers:</string>
    <string name="favourite">Favourite:</string>


    <string name="error_message_no_movies">No movies to show</string>
    <string name="error_message_site_not_supported">Sorry, we cannot play this video</string>
    <string name="error_message_no_internet">No internet connection</string>

    <string name="content_authority">xyz.janficko.movienator</string>
    <string name="content_favourite">Favourite or unfavourite movie</string>

    <!-- DUMMY TEXT -->
    <string name="dummy_trailer_title">Official Trailer #1</string>
    <string name="dummy_movie_title">Hot Fuzz</string>
    <string name="dummy_date">15/07/2016</string>
    <string name="dummy_vote_average">5.7</string>
    <string name="dummy_site">YouTube</string>
    <string name="dummy_author">John Doe</string>
    <string name="dummy_lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscingelit. Ostendit pedes et pectus. Dicimus aliquem hilare vivere;Duo Reges: constructio interrete. Aufert enim sensus actionemquetollit omnem. Praeclarae mortes sunt imperatoriae; Ab his oratores,ab his imperatores ac rerum publicarum principes extiterunt.</string>

</resources>
