<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_popular"
            android:title="@string/title_popular"
            android:orderInCategory="1"
            app:showAsAction="never"
            android:checked="true" />
        <item
            android:id="@+id/action_top_rated"
            android:title="@string/title_top_rated"
            android:orderInCategory="2"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_now_playing"
            android:title="@string/title_now_playing"
            android:orderInCategory="3"
            app:showAsAction="never" />
        <item
            android:id="@+id/action_favourites"
            android:title="@string/title_favourites"
            android:orderInCategory="4"
            app:showAsAction="never" />
    </group>

</menu>